[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/CustomColorPicker.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CCPMainDisplay.gd" type="Script" id=2]
[ext_resource path="res://Themes_Shaders/ColorPickerWheel.shader" type="Shader" id=3]
[ext_resource path="res://JoyPadColorPickerSprites/SlimColorWheelwOutlineFit.png" type="Texture" id=4]
[ext_resource path="res://Scripts/CCPColorWheel.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CCPSample.gd" type="Script" id=6]
[ext_resource path="res://JoyPadColorPickerSprites/Selector.png" type="Texture" id=7]
[ext_resource path="res://PresetColorTheme.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/PresetColor.gd" type="Script" id=9]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAdd.png" type="Texture" id=10]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAddPressed.png" type="Texture" id=11]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAddFocus.png" type="Texture" id=12]
[ext_resource path="res://Scripts/AddButton.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/color_to_out_border = 0.485
shader_param/outer_black_boundry = 0.489
shader_param/inner_black_boundry = 0.405
shader_param/color_to_in_border = 0.415

[sub_resource type="Theme" id=2]

[node name="CustomColorPicker" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -263.0
margin_right = 268.0
margin_bottom = 263.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 537.0

[node name="Main" type="HBoxContainer" parent="VBox"]
margin_right = 526.0
margin_bottom = 486.0
focus_neighbour_bottom = NodePath("../PresetBar/AddButton")
focus_mode = 2
script = ExtResource( 2 )

[node name="Display" type="CenterContainer" parent="VBox/Main"]
margin_right = 468.0
margin_bottom = 486.0

[node name="ColorWheel" type="TextureRect" parent="VBox/Main/Display"]
material = SubResource( 1 )
margin_top = 9.0
margin_right = 468.0
margin_bottom = 477.0
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Sample" type="ColorRect" parent="VBox/Main/Display"]
margin_left = 106.0
margin_top = 115.0
margin_right = 361.0
margin_bottom = 370.0
rect_min_size = Vector2( 255, 255 )
script = ExtResource( 6 )

[node name="SaturationBar" type="ColorRect" parent="VBox/Main/Display/Sample"]
margin_left = 255.0
margin_right = 257.0
margin_bottom = 255.0
mouse_filter = 1

[node name="SaturationBar2" type="ColorRect" parent="VBox/Main/Display/Sample/SaturationBar"]
show_behind_parent = true
margin_top = -8.0
margin_right = 2.0
margin_bottom = 263.0
mouse_filter = 1

[node name="ValueBar" type="ColorRect" parent="VBox/Main/Display/Sample"]
margin_right = 255.0
margin_bottom = 2.0
mouse_filter = 1

[node name="ValueBar2" type="ColorRect" parent="VBox/Main/Display/Sample/ValueBar"]
show_behind_parent = true
margin_left = -8.0
margin_right = 263.0
margin_bottom = 2.0
mouse_filter = 1

[node name="Selector" type="Sprite" parent="VBox/Main"]
position = Vector2( -7, -7 )
scale = Vector2( 0.843356, 0.843356 )
z_index = 1
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Main"]
margin_left = 472.0
margin_right = 526.0
margin_bottom = 486.0

[node name="Label" type="Label" parent="VBox/Main/VBoxContainer"]
margin_right = 54.0
margin_bottom = 14.0
text = "Preview "

[node name="Preview" type="ColorRect" parent="VBox/Main/VBoxContainer"]
margin_top = 18.0
margin_right = 54.0
margin_bottom = 486.0
rect_min_size = Vector2( 50, 468 )
color = Color( 1, 0, 0, 1 )

[node name="PresetBar" type="HBoxContainer" parent="VBox"]
margin_top = 490.0
margin_right = 526.0
margin_bottom = 530.0

[node name="0" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="1" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="2" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="3" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="4" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="5" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="6" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="7" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="8" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="9" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 8 )
script = ExtResource( 9 )

[node name="AddButton" type="TextureButton" parent="VBox/PresetBar"]
margin_right = 50.0
margin_bottom = 40.0
theme = SubResource( 2 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
script = ExtResource( 13 )
[connection signal="lose_focus" from="VBox/Main" to="." method="_on_lose_focus"]
[connection signal="main_color_changed" from="VBox/Main" to="." method="_on_Main_main_color_changed"]
[connection signal="new_preset_selected" from="VBox/Main" to="." method="_on_Main_new_preset_selected"]
[connection signal="wheel_mouse_input" from="VBox/Main/Display/ColorWheel" to="VBox/Main" method="_on_ColorWheel_wheel_mouse_input"]
[connection signal="mouse_input" from="VBox/Main/Display/Sample" to="VBox/Main" method="_on_Sample_mouse_input"]
[connection signal="color_pressed" from="VBox/PresetBar/0" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/0" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/1" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/1" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/2" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/2" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/3" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/3" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/4" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/4" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/5" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/5" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/6" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/6" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/7" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/7" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/8" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/8" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/9" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/9" to="." method="_on_preset_removed"]
[connection signal="lose_focus" from="VBox/PresetBar/AddButton" to="." method="_on_lose_focus"]
[connection signal="pressed" from="VBox/PresetBar/AddButton" to="." method="_on_AddButton_pressed"]
